Added Create favorite relation
